# shared_memory_entity

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  SmeConfig.cmake.in  build.sh
demo/: CMakeLists.txt
demo/src/: channel_reader.cpp  channel_writer.cpp  entity.cpp  entity.h  main.cpp  obj_reader.cpp  obj_writer.cpp  ref_layout.h  simple_obj.cpp  simple_obj.h  sme_reader.cpp  sme_writer.cpp
include/sme/: alloc_util.h  basic_allocator.h  basic_allocator.tcc  cond_var.h  futex.h  ipvt.h  mapped_obj.h  mem_domain.h  mem_map.h  mem_ptr.h  mem_space.h  msg_channel.h  mutex.h  shm.h  sync.h  sync_type.h
include/sme/internal/: futex.h  item_link.h  lf_queue.h  lf_queue.tcc  mem_domain_block.h  mem_domain_segment.h  mem_space_block.h  mem_space_manip.h  queue.h  queue.tcc  queue_res.h  ref_count.h  spin_lock.h  string_hash.h  sync_queue.h  sync_queue.tcc
include/sme/mdm/: allocator.h  deque.h  forward_list.h  list.h  map.h  queue.h  set.h  stack.h  string.h  unique_ptr.h  unordered_map.h  unordered_set.h  vector.h
include/sme/msp/: allocator.h  deque.h  forward_list.h  list.h  map.h  queue.h  root_obj.h  set.h  stack.h  string.h  unique_ptr.h  unordered_map.h  unordered_set.h  vector.h
src/: cond_var.cpp  futex.cpp  item_link.cpp  mapped_obj.cpp  mem_domain.cpp  mem_domain_block.cpp  mem_domain_segment.cpp  mem_map.cpp  mem_space.cpp  mem_space_block.cpp  mem_space_manip.cpp  msg_channel.cpp  mutex.cpp  shm.cpp  sync.cpp
test/: cond_var_test.cpp  item_link_test.cpp  lf_queue_test.cpp  mdm_test.cpp  mem_domain_alloc_test.cpp  mem_domain_block_test.cpp  mem_domain_test.cpp  mem_fault.cpp  mem_fault.h  mem_ptr_test.cpp  mem_space_alloc_test.cpp  mem_space_manip_test.cpp  mem_space_test.cpp  msg_channel_test.cpp  mutex_test.cpp  queue_test.cpp  shm_alloc_test.cpp  shm_test.cpp  shm_test_util.cpp  shm_test_util.h  sync_queue_test.cpp
